--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <button class="navbar-toggler navbar-toggler-right text-uppercase"
             type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
             aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fas fa-bars menu" style="font-size: 1.1rem;"></i>
+      <i class="fas fa-bars menu"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
@@ -68,12 +68,16 @@
 <section id="about">
   <div class="container">
     <h2 class="text-center text-uppercase text-secondary mb-5">Om meg</h2>
-    <div class="row">
-      <div class="col-lg-6 mx-auto">
-        <div class="lead text-center">
-          Jeg stiller til valg som nestleder og PR-SjaepH i HC, mandag den 1. april. Møt opp og stem på meg!
+    <div class="row align-items-center d-flex justify-content-center">
+      <div class="col-lg-4">
+        <div class="img-mobile">
+          <img src="img/about.jpg" class="img-fluid img-round">
         </div>
-
+      </div>
+      <div class="col-lg-6">
+        <p class="lead">
+          Jeg stiller til valg som nestleder og PR-SjaepH i HC, mandag den 1. april. Møt opp og stem på meg!
+        </p>
       </div>
     </div>
     <div class="text-center mt-4">
@@ -88,14 +92,14 @@
 <section class="bg-primary mb-0 text-secondary" id="hc">
   <div class="container">
     <h2 class="text-center text-uppercase mb-5">Høiskolens Chemikerforening</h2>
-    <div class="row">
-      <div class="col-lg-4 ml-auto align-items-center d-flex">
-        <img class="img-fluid logo-hc" src="img/logo.png">
-      </div>
-      <div class="col-lg-4 mr-auto">
+    <div class="row d-flex justify-content-center">
+      <div class="col-lg-4 hc">
         <p class="lead">Som linjeforeningens nestleder er mine store mål mangfold og inkludering. I HC skal vi ha rom
           til alt av Chemikere og alle skal føle seg som hjemme, uavhengig av om du trives best på lesesal eller
           fest.</p>
+      </div>
+      <div class="col-lg-4 align-items-center d-flex">
+        <img class="img-fluid logo-hc" src="img/logo.png">
       </div>
     </div>
   </div>
@@ -105,25 +109,29 @@
 <section id="promo">
   <div class="container">
     <h2 class="text-center text-uppercase text-secondary mb-5">Promokom</h2>
-    <div class="row">
-      <div class="col-lg-8 mx-auto">
+    <div class="row align-items-center d-flex justify-content-center">
+      <div class="col-lg-4">
+        <div class="img-mobile">
+          <img src="img/promokom.jpg" class="img-fluid img-round">
+        </div>
+      </div>
+      <div class="col-lg-6">
         <ul class="lead">
-          <li>
+          <li class="list">
             HCs beste komité skal bli enda bedre!
           </li>
-          <li>
+          <li class="list">
             Effektiv verving av nye medlemmer og større engasjement.
           </li>
-          <li>
+          <li class="list">
             Aktivt samarbeid!
           </li>
-          <li>
+          <li class="list">
             Mer cash $$$ til HC (studerte sammfunsøkonomi)
           </li>
         </ul>
       </div>
     </div>
-  </div>
 </section>
 
 <!--
