Fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <img class="img-fluid img-round mb-5 d-block mx-auto" src="img/profile.jpg" alt="">
     </div>
     <h1 class="text-uppercase mb-3">Stem på Sigrid</h1>
-    <h2 class="font-weight-light mb-0">Som nestleder og PR-SjaepH i HC!</h2>
+    <h2 class="font-weight-light mb-0">som nestleder og PR-SjaepH i HC!</h2>
   </div>
 </header>
 
@@ -76,7 +76,7 @@
       </div>
       <div class="col-lg-6">
         <p class="lead">
-          Jeg stiller til valg som nestleder og PR-SjaepH i HC, mandag den 1. april. Møt opp og stem på meg!
+          Jeg stiller til valg som nestleder og PR-SjaepH i HC, mandag den 1. april. Møt opp og husk å stemme!
         </p>
       </div>
     </div>
@@ -84,6 +84,9 @@
       <a class="btn btn-xl btn-outline-dark" href="https://hc.ntnu.no/events/social/97">
         Kom på medlemsmøtet!
       </a>
+    </div>
+    <div class="text-center" style="margin-top: 1.3rem">
+      <p>Hvis du ikke kan møte, så kan du forhåndsstemme på e-post til <span style="font-weight: bold">leder@hc.ntnu.no</span></p>
     </div>
   </div>
 </section>
@@ -127,7 +130,7 @@
             Aktivt samarbeid!
           </li>
           <li class="list">
-            Mer cash $$$ til HC (studerte sammfunsøkonomi)
+            Mer cash $$$ til HC (studerte samfunnsøkonomi)
           </li>
         </ul>
       </div>
