--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="row align-items-center d-flex justify-content-center">
       <div class="col-lg-4">
         <div class="img-mobile">
-          <img src="img/promokom.jpg" class="img-fluid img-round">
+          <img src="img/promo.jpg" class="img-fluid img-round">
         </div>
       </div>
       <div class="col-lg-6">
