--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </a>
     </div>
     <div class="text-center" style="margin-top: 1.3rem">
-      <p>Hvis du ikke kan møte, så kan du forhåndsstemme på e-post til <span style="font-weight: bold">leder@hc.ntnu.no</span></p>
+      <p class="lead">Hvis du ikke kan møte, så kan du forhåndsstemme på e-post til <span style="font-weight: bold">leder@hc.ntnu.no</span></p>
     </div>
   </div>
 </section>
