Minor fixes, hyphenated long word

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         Kom på medlemsmøtet!
       </a>
     </div>
-    <div class="text-center" style="margin-top: 1.3rem">
+    <div class="text-center" style="margin-top: 2.5rem">
       <p class="lead">Hvis du ikke kan møte, så kan du forhåndsstemme på e-post til <span style="font-weight: bold">leder@hc.ntnu.no</span></p>
     </div>
   </div>
@@ -94,7 +94,7 @@
 <!-- HC Section -->
 <section class="bg-primary mb-0 text-secondary" id="hc">
   <div class="container">
-    <h2 class="text-center text-uppercase mb-5">Høiskolens Chemikerforening</h2>
+    <h2 class="text-center text-uppercase mb-5" style="-webkit-hyphens: auto;">Høiskolens Chemikerforening</h2>
     <div class="row d-flex justify-content-center">
       <div class="col-lg-4 hc">
         <p class="lead">Som linjeforeningens nestleder er mine store mål mangfold og inkludering. I HC skal vi ha rom
