Better logo, rephrasing

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
       </div>
       <div class="col-lg-6">
         <p class="lead">
-          Jeg stiller til valg som nestleder og PR-SjaepH i HC, mandag den 1. april. Møt opp og husk å stemme!
+          Jeg stiller til valg som <span style="font-weight: bold">nestleder og PR-SjaepH</span> i HC, mandag den 1.
+          april. Husk å møte opp og stemme!
         </p>
       </div>
     </div>
@@ -85,8 +86,9 @@
         Kom på medlemsmøtet!
       </a>
     </div>
-    <div class="text-center" style="margin-top: 2.5rem">
-      <p class="lead">Hvis du ikke kan møte, så kan du forhåndsstemme på e-post til <span style="font-weight: bold">leder@hc.ntnu.no</span></p>
+    <div class="text-center col-lg-8 mx-auto" style="margin-top: 2.5rem">
+      <p class="lead">Hvis du ikke kan møte, så kan du forhåndsstemme på e-post til <span style="font-weight: bold">leder@hc.ntnu.no</span>
+      </p>
     </div>
   </div>
 </section>
@@ -95,14 +97,16 @@
 <section class="bg-primary mb-0 text-secondary" id="hc">
   <div class="container">
     <h2 class="text-center text-uppercase mb-5" style="-webkit-hyphens: auto;">Høiskolens Chemikerforening</h2>
-    <div class="row d-flex justify-content-center">
-      <div class="col-lg-4 hc">
+    <div class="row d-flex justify-content-center align-items-center">
+      <div class="col-lg-4 hc mb-2">
         <p class="lead">Som linjeforeningens nestleder er mine store mål mangfold og inkludering. I HC skal vi ha rom
           til alt av Chemikere og alle skal føle seg som hjemme, uavhengig av om du trives best på lesesal eller
           fest.</p>
       </div>
-      <div class="col-lg-4 align-items-center d-flex">
-        <img class="img-fluid logo-hc" src="img/logo.png">
+      <div class="col-lg-4 justify-content-center d-flex">
+        <div class="logo-container">
+          <img class="img-fluid logo-hc" src="img/logo3d.png">
+        </div>
       </div>
     </div>
   </div>
